--- a/Blogy.Business/Blogy.Business.csproj
+++ b/Blogy.Business/Blogy.Business.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\Blogy.DataAccess\Blogy.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
+  </ItemGroup>
+
 </Project>
