--- a/Blogy.WebUI/appsettings.json
+++ b/Blogy.WebUI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-I05VV5A;Database=MyAcademyBlogDb;TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
